# ctfp

./: .gitignore  LICENSE  README.md  ctfp.cabal
src/: CTFP.hs
src/Ch01/: ID.hs  compose.cpp  compose.h  id.cpp  id.h  identity.h  testcompose.cpp  testcomposeid.cpp  testcomposeidentity.cpp  testid.cpp  testidentity.cpp
src/Ch02/: Bool.hs  Fact.hs  Unit.hs  fact.cpp  fact.h  testfact.cpp
test/: Ch01Test.hs  Main.hs
