cabal-version:      3.0
name:               ctfp

version:            0.1.0.0

synopsis:
    Exercises and examples from "Category Theory for Programmers" - Bartosz Milewski

homepage:           https://github.com/GrahamStrickland/ctfp.git

license:            BSD-3-Clause

license-file:       LICENSE

author:             Graham Strickland

maintainer:         grahamhstrickland@gmail.com

category:           Math
build-type:         Simple

extra-doc-files:    CHANGELOG.md

-- Extra source files to be distributed with the package, such as examples, or a tutorial module.
-- extra-source-files:

common warnings
    ghc-options: -Wall

library
    import:           warnings

    -- Modules exported by the library.
    exposed-modules:  CTFP, Ch01.ID, Ch02.Fact, Ch02.Unit, Ch02.Bool

    -- Modules included in this library but not exported.
    -- other-modules:

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:

    build-depends:    base ^>=4.21.0.0

    hs-source-dirs:   src

    default-language: Haskell2010

test-suite ctfp-test
    import:           warnings

    default-language: Haskell2010

    -- Modules included in this executable, other than Main.
    -- other-modules:

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:

    type:             exitcode-stdio-1.0

    hs-source-dirs:   src, test

    main-is:          Main.hs

    build-depends:
        base ^>=4.21.0.0,
        HUnit,
        ctfp
